--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,8 +4,6 @@
   margin-inline: auto;
 }
 
-.user-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  gap: 2rem;
+::ng-deep .mat-mdc-form-field-subscript-wrapper {
+  margin-bottom: -2rem;
 }
