--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,1 +1,8 @@
-<app-user-card *ngFor="let user of users" [user]="user"></app-user-card>
+<app-user-card
+  *ngFor="let user of users"
+  [user]="user"
+  [isSelected]="selectedUserIds.includes(user.id)"
+></app-user-card>
+<div>
+  <span *ngFor="let id of selectedUserIds">{{ id }}</span>
+</div>
