Implement deleting users

--- a/src/app/user/user-toolbar/user-toolbar.component.html
+++ b/src/app/user/user-toolbar/user-toolbar.component.html
@@ -7,7 +7,12 @@
     >Select all</mat-checkbox
   >
 
-  <button mat-stroked-button color="warn" class="user-toolbar__delete">
+  <button
+    mat-stroked-button
+    color="warn"
+    class="user-toolbar__delete"
+    (click)="onDeleteSelected()"
+  >
     Delete
   </button>
 
