--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,8 +1,5 @@
 <app-user-card
-  *ngFor="let user of users"
+  *ngFor="let user of users | searchFilter : searchText"
   [user]="user"
   [isSelected]="selectedUserIds.includes(user.id)"
 ></app-user-card>
-<div>
-  <span *ngFor="let id of selectedUserIds">{{ id }}</span>
-</div>
