--- a/src/app/user/user-list/user-list.component.scss
+++ b/src/app/user/user-list/user-list.component.scss
@@ -1,5 +1,5 @@
 :host {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
   gap: 2rem;
 }
