Add separate pages for two parts oh homework

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
 <app-header></app-header>
-<app-user-toolbar></app-user-toolbar>
-
-<div class="container">
-  <app-user-list class="user-list"></app-user-list>
-</div>
+<mat-divider></mat-divider>
+<router-outlet></router-outlet>
