--- a/src/app/user/user-toolbar/user-toolbar.component.html
+++ b/src/app/user/user-toolbar/user-toolbar.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar class="user-toolbar">
   <button
+    *ngIf="allowCreateUser"
     mat-stroked-button
     color="accent"
     class="user-toolbar__add"
