--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,9 @@ body {
   font-size: 1.6rem;
   font-weight: 500;
 }
+
+.container {
+  max-width: 120rem;
+  padding-inline: 3rem;
+  margin-inline: auto;
+}
