Fix typo in form

--- a/src/app/user/create-user-modal/create-user-modal.component.html
+++ b/src/app/user/create-user-modal/create-user-modal.component.html
@@ -6,14 +6,14 @@
       <mat-label>First name</mat-label>
       <input type="text" matInput formControlName="firstName" />
       <mat-icon matSuffix>person</mat-icon>
-      <mat-error>Firstname should be at least 2 charachters</mat-error>
+      <mat-error>First name should be at least 2 charachters</mat-error>
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Last name</mat-label>
       <input type="text" matInput formControlName="lastName" />
       <mat-icon matSuffix>person</mat-icon>
-      <mat-error>Last should be between 2 an 60 charachters</mat-error>
+      <mat-error>Last name should be between 2 an 60 charachters</mat-error>
     </mat-form-field>
 
     <mat-form-field>
